# tinycml

./: .gitignore  Doxyfile  Makefile  README.md  tinycml.h  tinycml.pc.in
benchmarks/: README.md  run_benchmarks.py
data/: binary_classification.csv  clusters.csv  simple_linear.csv
docs/: API.md  API_TR.md
embed/: Makefile.embed  README.md  cml_config.h  cml_math_lut.h  cml_pool.h  tinycml_embed.c
examples/: cross_validation_example.c  estimator_api_example.c  knn_example.c  linear_regression_example.c  pca_example.c
include/: agglomerative.h  cml_error.h  csv.h  dbscan.h  decision_tree.h  estimator.h  gradient_boosting.h  isolation_forest.h  kmeans.h  knn.h  linear_regression.h  logistic_regression.h  matrix.h  metrics.h  neural_network.h  pipeline.h  preprocessing.h  ridge.h  sgd.h  utils.h  vector.h
models/: README.md
packaging/: README.md
python/: README.md  pyproject.toml  setup.py
python/tests/: test_bindings.py
python/tinycml/: models.py
scripts/: amalgamate.sh  amalgamate_post.py  generate_zoo.py
specs/: 01-matrix-operations.md  02-data-handling.md  03-ml-algorithms.md  04-metrics.md
src/: agglomerative.c  cml_error.c  csv.c  dbscan.c  decision_tree.c  estimator.c  gradient_boosting.c  isolation_forest.c  kmeans.c  knn.c  linear_regression.c  logistic_regression.c  metrics.c  neural_network.c  pipeline.c  preprocessing.c  ridge.c  sgd.c  utils.c  vector.c
tests/: test_agglomerative.c  test_cml_error.c  test_csv_robust.c  test_feature_selection.c  test_gradient_boosting.c  test_harness.h  test_isolation_forest.c  test_kmeans.c  test_knn.c  (+13 more)
(+18 files in other folders)
