[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tinycml"
version = "0.1.0"
description = "Pure C11 machine learning library with sklearn-compatible Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "scikit-learn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
